--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loginTitle">Login</string>
+    <string name="registerTitle">Register</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="loginRegisterMsg">If you dont have an account please Register</string>
+    <string name="confirmP">Confirm Password</string>
 </resources>
