--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="password">Password</string>
     <string name="loginRegisterMsg">If you dont have an account please Register</string>
     <string name="confirmP">Confirm Password</string>
+    <string name="emptyLogin">Empty email or password!</string>
+    <string name="emptyRegister">Empty fields!</string>
 </resources>
