- Create the Shopping List Activity - By using the firebase methods, get the personal and shared Shopping List - While these lists are fetched, show a progress - If these lists are empty show a 'No Data' message in the middle of the page - This page should contain a Flat Action Button in order to add a new shopping list - This page contains two sections:
**Current Shopping Lists**
- All the active list of the user
- Each list has an delete button which permit to delete the selected list

**Completed Shopping Lists**
- All the completed lists of the user
- Each list has an delete button which permit to delete the selected list

- In the action bar appear a menu button with two actions:
-- Sort: open a dialog for sorting the active list
-- Logout: open dialog for logout confirmation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="confirmP">Confirm Password</string>
     <string name="emptyLogin">Empty email or password!</string>
     <string name="emptyRegister">Empty fields!</string>
+    <string name="currentShoppingLists">Current Shopping Lists</string>
+    <string name="completedShoppingLists">Completed Shopping Lists</string>
+    <string name="listTitle">Shopping Lists</string>
+    <string name="sort">Sort</string>
+    <string name="logout">Logout</string>
+    <string name="noData">No Data</string>
 </resources>
