--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,12 @@
     <string name="sort">Sort</string>
     <string name="logout">Logout</string>
     <string name="noData">No Data</string>
+    <string name="items">Items</string>
+    <string name="listName">List name</string>
+    <string name="location">Location</string>
+    <string name="description">Description</string>
+    <string name="name">Name</string>
+    <string name="quantity">Quantity</string>
+    <string name="addNewItem">Add new item</string>
+    <string name="saveList">Save list</string>
 </resources>
