- This screen permit to add a new shopping list and the items needed with their quantity - The screen is opened by using the flat action button from Shopping List screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_list_details">ListDetailsActivity</string>
     <string name="details">Shopping List Name</string>
     <string name="listStatus">List Status</string>
+    <string name="AddShoppingList">Add new Shopping List</string>
 </resources>
