--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="logoutMessage">Are you sure you want to logout?</string>
+    <string name="default_notification_channel_id">Tvac_CH_01</string>
 </resources>
