--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="logoutMessage">Are you sure you want to logout?</string>
     <string name="default_notification_channel_id">Tvac_CH_01</string>
     <item name="addFriendNotificationId" type="id">123456</item>
+    <string name="friendFist">Friend List</string>
 </resources>
